# bilibili-downloader

./: .gitignore  BilibiliDownloader.spec  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  constraints.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bilibili_downloader/: __init__.py  __main__.py
bilibili_downloader/api/: client.py  endpoints.py  login.py
bilibili_downloader/core/: batch.py  danmaku.py  download_service.py  downloader.py  ffmpeg.py  models.py  subtitle.py
bilibili_downloader/gui/: main_window.py
bilibili_downloader/gui/assets/: app_icon.icns
bilibili_downloader/gui/dialogs/: __init__.py  batch_dialog.py  login_dialog.py  settings_dialog.py
bilibili_downloader/gui/resources/: __init__.py  paths.py  styles.py  theme.py
bilibili_downloader/gui/threads/: batch_worker.py  download_worker.py  ffmpeg_worker.py  login_status_worker.py  resolve_worker.py
bilibili_downloader/gui/widgets/: chinese_input.py  download_list.py  hero_panel.py  video_info.py
bilibili_downloader/utils/: config.py  network.py  validators.py
docs/: BUILDING.md  TROUBLESHOOTING.md  USER_GUIDE.md
packaging_hooks/: hook-keyring.py
scripts/: build_app_icons.py
src/: __main__.py
src/api/: client.py  endpoints.py  login.py  wbi.py
src/core/: batch.py  danmaku.py  downloader.py  ffmpeg.py  models.py  subtitle.py
src/gui/: main_window.py
src/gui/dialogs/: __init__.py  batch_dialog.py  login_dialog.py  settings_dialog.py
src/utils/: config.py  validators.py
tests/: conftest.py  test_api_client.py  test_batch.py  test_cli.py  test_config.py  test_danmaku.py  test_download_service.py  test_downloader.py  test_ffmpeg.py  test_gui_dialogs.py  test_login.py  test_models.py  test_subtitle.py  test_theme.py  test_validators.py  test_wbi.py
(+3 files in other folders)
