[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-downloader"
version = "0.3.0"
description = "Bilibili video downloader with desktop GUI and CLI modes"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "defusedxml>=0.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.2",
    "responses>=0.24",
    "PyInstaller>=6.0",
]

[project.scripts]
bilibili-downloader = "bilibili_downloader.__main__:main"

[tool.setuptools.packages.find]
include = ["bilibili_downloader*"]

[tool.setuptools.package-data]
"bilibili_downloader.gui" = ["assets/*"]
