[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-downloader"
dynamic = ["version"]
description = "Bilibili video downloader with desktop GUI and CLI modes"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "httpx[http2]>=0.27",
    "pydantic>=2.0",
    "qrcode[pil]>=7.4",
    "Pillow>=10.0",
    "defusedxml>=0.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.2",
    "responses>=0.24",
    "PyInstaller>=6.0",
    "ruff>=0.15",
]

[project.scripts]
bilibili-downloader = "bilibili_downloader.__main__:main"

[tool.setuptools.packages.find]
include = ["bilibili_downloader*"]

[tool.setuptools.package-data]
"bilibili_downloader.gui" = ["assets/*"]

[tool.setuptools.dynamic]
version = {attr = "bilibili_downloader.__version__"}

[tool.ruff.lint]
select = ["E9", "F", "I"]
